--- a/build.yaml
+++ b/build.yaml
@@ -13,8 +13,8 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: dactyl_manuform_5x6_left
+    shield: corne_v4_max_left
   - board: nice_nano_v2
-    shield: dactyl_manuform_5x6_right
+    shield: corne_v4_max_right
   - board: nice_nano_v2
     shield: settings_reset
