--- a/config/boards/shields/corne_v4_max/corne_v4_max.dtsi
+++ b/config/boards/shields/corne_v4_max/corne_v4_max.dtsi
@@ -1,6 +1,11 @@
 #include <dt-bindings/zmk/matrix_transform.h>
 
 / {
+    &physical_layout0 {
+    kscan = <&kscan0>; // Label of the kscan node this layout uses
+    transform = <&default_transform>; // Label of the matrix transform this layout uses
+    };
+
     chosen {
         zmk,kscan = &kscan0;
         zmk,matrix_transform = &default_transform;
