--- a/config/boards/shields/corne_v4_max/corne_v4_max-layouts.dtsi
+++ b/config/boards/shields/corne_v4_max/corne_v4_max-layouts.dtsi
@@ -3,46 +3,54 @@
 / {
     physical_layout0: physical_layout_0 {
         compatible = "zmk,physical-layout";
-        display-name = "Default";
+        display-name = "LAYOUT";
 
         kscan = <&kscan0>;
         transform = <&matrix_transform0>;
 
         keys  //                     w   h    x    y     rot    rx    ry
-            = <&key_physical_attrs 100 100    0   95       0     0     0>
-            , <&key_physical_attrs 100 100  100   32       0     0     0>
-            , <&key_physical_attrs 100 100  200    0       0     0     0>
-            , <&key_physical_attrs 100 100  300   29       0     0     0>
-            , <&key_physical_attrs 100 100  400   42       0     0     0>
-            , <&key_physical_attrs 100 100  700   42       0     0     0>
-            , <&key_physical_attrs 100 100  800   29       0     0     0>
-            , <&key_physical_attrs 100 100  900    0       0     0     0>
-            , <&key_physical_attrs 100 100 1000   32       0     0     0>
-            , <&key_physical_attrs 100 100 1100   95       0     0     0>
-            , <&key_physical_attrs 100 100    0  195       0     0     0>
-            , <&key_physical_attrs 100 100  100  132       0     0     0>
-            , <&key_physical_attrs 100 100  200  100       0     0     0>
-            , <&key_physical_attrs 100 100  300  129       0     0     0>
-            , <&key_physical_attrs 100 100  400  142       0     0     0>
-            , <&key_physical_attrs 100 100  700  142       0     0     0>
-            , <&key_physical_attrs 100 100  800  129       0     0     0>
-            , <&key_physical_attrs 100 100  900  100       0     0     0>
-            , <&key_physical_attrs 100 100 1000  132       0     0     0>
-            , <&key_physical_attrs 100 100 1100  195       0     0     0>
-            , <&key_physical_attrs 100 100    0  295       0     0     0>
-            , <&key_physical_attrs 100 100  100  232       0     0     0>
-            , <&key_physical_attrs 100 100  200  200       0     0     0>
-            , <&key_physical_attrs 100 100  300  229       0     0     0>
-            , <&key_physical_attrs 100 100  400  242       0     0     0>
-            , <&key_physical_attrs 100 100  700  242       0     0     0>
-            , <&key_physical_attrs 100 100  800  229       0     0     0>
-            , <&key_physical_attrs 100 100  900  200       0     0     0>
-            , <&key_physical_attrs 100 100 1000  232       0     0     0>
-            , <&key_physical_attrs 100 100 1100  295       0     0     0>
-            , <&key_physical_attrs 100 100  330  355    1500   430   455>
-            , <&key_physical_attrs 100 100  430  355    3000   430   455>
-            , <&key_physical_attrs 100 100  670  355 (-3000)   770   455>
-            , <&key_physical_attrs 100 100  770  355 (-1500)   770   455>
+            = <&key_physical_attrs 100 100    0   50       0     0     0>
+            , <&key_physical_attrs 100 100  100   50       0     0     0>
+            , <&key_physical_attrs 100 100  200   20       0     0     0>
+            , <&key_physical_attrs 100 100  300    0       0     0     0>
+            , <&key_physical_attrs 100 100  400   25       0     0     0>
+            , <&key_physical_attrs 100 100  500   25       0     0     0>
+            , <&key_physical_attrs 100 100  900   25       0     0     0>
+            , <&key_physical_attrs 100 100 1000   25       0     0     0>
+            , <&key_physical_attrs 100 100 1100    0       0     0     0>
+            , <&key_physical_attrs 100 100 1200   20       0     0     0>
+            , <&key_physical_attrs 100 100 1300   50       0     0     0>
+            , <&key_physical_attrs 100 100 1400   50       0     0     0>
+            , <&key_physical_attrs 100 100    0  150       0     0     0>
+            , <&key_physical_attrs 100 100  100  150       0     0     0>
+            , <&key_physical_attrs 100 100  200  120       0     0     0>
+            , <&key_physical_attrs 100 100  300  100       0     0     0>
+            , <&key_physical_attrs 100 100  400  125       0     0     0>
+            , <&key_physical_attrs 100 100  500  125       0     0     0>
+            , <&key_physical_attrs 100 100  900  125       0     0     0>
+            , <&key_physical_attrs 100 100 1000  125       0     0     0>
+            , <&key_physical_attrs 100 100 1100  100       0     0     0>
+            , <&key_physical_attrs 100 100 1200  120       0     0     0>
+            , <&key_physical_attrs 100 100 1300  150       0     0     0>
+            , <&key_physical_attrs 100 100 1400  150       0     0     0>
+            , <&key_physical_attrs 100 100    0  250       0     0     0>
+            , <&key_physical_attrs 100 100  100  250       0     0     0>
+            , <&key_physical_attrs 100 100  200  220       0     0     0>
+            , <&key_physical_attrs 100 100  300  200       0     0     0>
+            , <&key_physical_attrs 100 100  400  225       0     0     0>
+            , <&key_physical_attrs 100 100  500  225       0     0     0>
+            , <&key_physical_attrs 100 100  900  225       0     0     0>
+            , <&key_physical_attrs 100 100 1000  225       0     0     0>
+            , <&key_physical_attrs 100 100 1100  200       0     0     0>
+            , <&key_physical_attrs 100 100 1200  220       0     0     0>
+            , <&key_physical_attrs 100 100 1300  250       0     0     0>
+            , <&key_physical_attrs 100 100 1400  250       0     0     0>
+            , <&key_physical_attrs 100 100  350  325       0     0     0>
+            , <&key_physical_attrs 100 100  450  325    1300     0   425>
+            , <&key_physical_attrs 100 150  550  305    2600     0   460>
+            , <&key_physical_attrs 100 150  850  305 (-2600)   950   460>
+            , <&key_physical_attrs 100 100  950  325 (-1300)  1050   425>
+            , <&key_physical_attrs 100 100 1050  325       0     0     0>
             ;
     };
 };
