--- a/config/boards/shields/corne_v4_max/corne_v4_max.dtsi
+++ b/config/boards/shields/corne_v4_max/corne_v4_max.dtsi
@@ -1,16 +1,12 @@
 #include <dt-bindings/zmk/matrix_transform.h>
-#include <corne_v4_max-layouts.dtsi>
+//#include <corne_v4_max-layouts.dtsi>
 
-
-&physical_layout0 {
-        kscan = <&kscan0>; // Label of the kscan node this layout uses
-        transform = <&default_transform>; // Label of the matrix transform this layout uses
-    };
 
 / {
     chosen {
         zmk,kscan = &kscan0;
         zmk,matrix_transform = &default_transform;
+        zmk,physical_layout = &physical_layout0;
     };
 
     default_transform: keymap_transform_0 {
