--- a/config/boards/shields/corne_v4_max/corne_v4_max.dtsi
+++ b/config/boards/shields/corne_v4_max/corne_v4_max.dtsi
@@ -1,5 +1,5 @@
 #include <dt-bindings/zmk/matrix_transform.h>
-//#include <corne_v4_max-layouts.dtsi>
+#include "corne_v4_max-layouts.dtsi"
 
 
 / {
