--- a/config/corne_v4_max.conf
+++ b/config/corne_v4_max.conf
@@ -21,4 +21,4 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
-CONFIG_ZMK_STUDIO=y
+# CONFIG_ZMK_STUDIO=y
