--- a/build.yaml
+++ b/build.yaml
@@ -12,9 +12,9 @@
 #     shield: reviung41
 ---
 include:
-  - board: nrfmicro/nrf52840
+  - board: nice_nano_v2
     shield: corne_v4_max_left
-  - board: nrfmicro/nrf52840
+  - board: nice_nano_v2
     shield: corne_v4_max_right
-  - board: nrfmicro/nrf52840
+  - board: nice_nano_v2
     shield: settings_reset
